@@ -1,3 +1,13 @@
+2019-06-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/main.c,
+	  src/pdk/peep.h,
+	  src/pdk/peep.c:
+	  Prepare for notUsed() and notUsedFrom().
+	* src/stm8/peep.c,
+	  src/z80/peep.c:
+	  Fixes for notUsedFrom().
+
 2019-06-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* device/include/wchar.h,
